# rocket-longpolling

./: Cargo.toml  README.md
src/: main.rs
web/: README.md  package.json  webpack.config.js
web/src/: index.js
web/static/: index.html
